--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "dojo": "^1.16.3",
-    "dojo-webpack-plugin": "^2.8.15",
+    "dojo-webpack-plugin": "2.8.17",
     "source-map": "^0.7.3",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.2.1"
